Starting updating code for migration to Java 12. Implemented AutoReply in Multicon. Updated TCP server in Multicon to show a TCP view when connected.